# cv-schema

./: pyproject.toml
models/: cv_model.py  education.py  experience.py  personal.py  publication.py  research.py
src/cv_schema/: affiliation.py  coauthor.py  cv_model.py  education.py  experience.py  flexible_date.py  google_scholar.py  google_scholar_author.py  grant.py  gs_publication.py  impact.py  institution.py  membership.py  news.py  personal.py  publication.py  referee.py  reference.py  research.py  security.py  service.py  social.py  supervision.py  teaching.py  yaml_serialize.py
