[project]
name = "cv-schema"
version = "0.1.0"
description = "Canonical CV domain schema"
authors = [{ name = "Fernando Jurado", email = "fdo.jurado@gmail.com" }]
requires-python = ">=3.10"
dependencies = [
    "ruamel.yaml",
    "pydantic>=2.0"
]

[build-system]
requires = ["setuptools>=67.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]